# OPD_lab

./: .gitignore
sfml.1/: CMakeLists.txt
sfml.1.1/: CMakeLists.txt
sfml.1.1/01/: CMakeLists.txt
sfml.1.1/02/: CMakeLists.txt  main.cpp
sfml.1.1/03/: main.cpp
sfml.1/01/: CMakeLists.txt  main.cpp
sfml.1/02/: main.cpp
sfml.1/03/: main.cpp
sfml.1/sfml.1.1/01/: main.cpp
sfml.1/sfml1.3/: CMakeLists.txt
sfml.2/: CMakeLists.txt
sfml.2/00/: CMakeLists.txt  main.cpp
sfml.2/01/: CMakeLists.txt  main.cpp
sfml.2/02/: CMakeLists.txt  main.cpp
sfml.2/03/: main.cpp
sfml.2/sfml2.1/: main.cpp
sfml.2/sfml2.2/: main.cpp
sfml.3/: CMakeLists.txt
sfml.3/00/: CMakeLists.txt
sfml.3/01/: main.cpp
sfml.3/02/: main.cpp
sfml.3/03/: CMakeLists.txt  main.cpp
sfml.3/04/: 04  main.cpp
sfml.3/sfml3.1/: main.cpp
sfml.3/sfml3.2/: main.cpp
sfml.3/sfml3.3/: main.cpp
workshop1/: CMakeLists.txt
workshop1/workshop1.1/: CMakeLists.txt  main.cpp
workshop1/workshop1.2/: CMakeLists.txt  main.cpp
workshop1/workshop1.3/: CMakeLists.txt  main.cpp
workshop1/workshop1.4/: CMakeLists.txt  main.cpp
